Slight change to layout file in webapp as I noticed that libman restore placed Datatables.net buttons extension in slightly different dir paths.

--- a/solution/WebApplication/WebApplication/Views/Shared/_Layout.cshtml
+++ b/solution/WebApplication/WebApplication/Views/Shared/_Layout.cshtml
@@ -160,7 +160,7 @@
     <script src="~/js/site.js" asp-append-version="true"></script>
     <script src="~/lib/datatables.net/jquery.dataTables.min.js" asp-append-version="true"></script>
     <script src="~/lib/datatables.net/dataTables.bootstrap4.min.js" asp-append-version="true"></script>
-    <script src="~/lib/datatables.net/dataTables.buttons.min.js" asp-append-version="true"></script>
+    <script src="~/lib/datatables.net/js/dataTables.buttons.min.js" asp-append-version="true"></script>
     <script src="~/lib/datatables.net/buttons.bootstrap4.min.js" asp-append-version="true"></script>
     <script src="~/lib/datatables.net/dataTables.select.min.js" asp-append-version="true"></script>
     <script src="~/lib/moment.js/moment-with-locales.min.js" asp-append-version="true"></script>
