--- a/solution/WebApplication/WebApplication/Views/SubjectArea/IndexDataTable.cshtml
+++ b/solution/WebApplication/WebApplication/Views/SubjectArea/IndexDataTable.cshtml
@@ -2,7 +2,7 @@
 @model IEnumerable<WebApplication.Models.TaskGroup>
 
 @{
-    ViewData["Title"] = typeof(TaskGroup).Name.Pluralize().Humanize(LetterCasing.Title);
+    ViewData["Title"] = typeof(SubjectArea).Name.Pluralize().Humanize(LetterCasing.Title);
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
