--- a/solution/WebApplication/WebApplication/Views/SubjectArea/Delete.cshtml
+++ b/solution/WebApplication/WebApplication/Views/SubjectArea/Delete.cshtml
@@ -14,6 +14,12 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.SubjectAreaForm)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.SubjectAreaForm.SubjectAreaFormId)
+        </dd class>
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.SubjectAreaName)
         </dt>
         <dd class = "col-sm-10">
@@ -24,12 +30,6 @@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.ActiveYn)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.SubjectAreaFormId)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.SubjectAreaFormId)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.DefaultTargetSchema)
