Minor Layout Modifications

--- a/solution/WebApplication/WebApplication/Views/Shared/_Layout.cshtml
+++ b/solution/WebApplication/WebApplication/Views/Shared/_Layout.cshtml
@@ -182,8 +182,7 @@
 
         <!-- Page Content -->
         <div id="content">
-            <!-- We'll fill this with dummy content -->
-            @*<header class="sticky-top">*@
+            <header class="sticky-top">
             <nav class="navbar navbar-expand-md navbar bg header-center">
                 @*<nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3 nav">*@
                 <div class="container-fluid">
@@ -200,7 +199,7 @@
                     </div>                    
                 </div>
             </nav>
-            @*</header>*@
+            </header>
             <div class="row">
                 <div id="mainBody" class="col-12">
                     <div class="container-fluid">
