Fixed minor front end issues
Fixed minor front end issues

--- a/solution/WebApplication/WebApplication/Views/FrameworkTaskRunner/IndexDataTable.cshtml
+++ b/solution/WebApplication/WebApplication/Views/FrameworkTaskRunner/IndexDataTable.cshtml
@@ -16,7 +16,7 @@
 
 @section Scripts
 {
-    <script src="~/lib/bswindow/bswindow.js" asp-append-version="true"></script>
+    <script src="~/js/bswindow/bswindow.js" asp-append-version="true"></script>
     <script type="text/javascript">
         var ModelName = "FrameworkTaskRunnerDapper";
 
