--- a/solution/WebApplication/WebApplication/Views/TaskMaster/Details.cshtml
+++ b/solution/WebApplication/WebApplication/Views/TaskMaster/Details.cshtml
@@ -28,19 +28,19 @@
                 @Html.DisplayNameFor(model => model.ScheduleMaster)
             </dt>
             <dd class = "col-sm-10">
-                @Html.DisplayFor(model => model.ScheduleMaster.ScheduleCronExpression)
+                @Html.DisplayFor(model => model.ScheduleMaster.ScheduleDesciption)
             </dd>
             <dt class = "col-sm-2">
                 @Html.DisplayNameFor(model => model.SourceSystem)
             </dt>
             <dd class = "col-sm-10">
-                @Html.DisplayFor(model => model.SourceSystem.SystemAuthType)
+                @Html.DisplayFor(model => model.SourceSystem.SystemName)
             </dd>
             <dt class = "col-sm-2">
                 @Html.DisplayNameFor(model => model.TargetSystem)
             </dt>
             <dd class = "col-sm-10">
-                @Html.DisplayFor(model => model.TargetSystem.SystemAuthType)
+                @Html.DisplayFor(model => model.TargetSystem.SystemName)
             </dd>
                 <dt class = "col-sm-2">
                     @Html.DisplayNameFor(model => model.TaskMasterName)
