Added all TaskMasterJson schemas

--- a/solution/WebApplication/WebApplication/Views/Shared/_Layout.cshtml
+++ b/solution/WebApplication/WebApplication/Views/Shared/_Layout.cshtml
@@ -250,6 +250,9 @@
     <script src="~/lib/toastr.js/toastr.min.js" asp-append-version="true"></script>
     <script src="~/js/helpSection.js" asp-append-version="true"></script>
     <script src="~/lib/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.min.js" asp-append-version="true"></script>
+    <script src="~/lib/ace/ace.js" asp-append-version="true"></script>
+    <script src="~/lib/ace/mode-sql.min.js" asp-append-version="true"></script>
+    <script src="~/lib/ace/theme-vibrant_ink.min.js" asp-append-version="true"></script>
     @RenderSection("Scripts", required: false)
 </body>
 </html>
